[cleanup] remove slides count in fastlane talk

--- a/Talks/Fastlane/fastlane.html
+++ b/Talks/Fastlane/fastlane.html
@@ -16,7 +16,7 @@
 
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
       .remark-slide-number {
-        /*visibility: hidden;*/
+        visibility: hidden;
       }
       .footnote {
         position: absolute;
